<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.AddDemandeAutorisationFrag"
    android:layout_marginTop="@dimen/_50sdp">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="UselessParent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:orientation="vertical"
        android:padding="20dp"
        tools:context=".Controller.Pages.LoginActivity"
        tools:ignore="RtlHardcoded">

        <ImageView
            android:id="@+id/logo_img"
            android:layout_width="150dp"
            android:layout_height="140dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/tunisair_s_logo" />

        <TextView
            android:id="@+id/logo_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/add_your_leave_demand_here"
            android:textColor="@color/myblue"
            android:textSize="33sp"
            android:layout_marginBottom="5dp"/>

        <TextView
            android:id="@+id/slogan_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fill_the_form_below_to_pass_your_demand"
            android:textColor="@color/black"
            android:textSize="18sp" />
        <Spinner
            android:id="@+id/spinnerType"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:entries="@array/type_arrays"
            android:prompt="@string/type_prompt"
            android:layout_marginTop="30dp"
            />
        <EditText
            android:id="@+id/nbrDays"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/number_of_days"
            android:inputType="number"
            android:autofillHints=""
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/date_debut"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:hint="@string/from_hint"
                android:inputType="time"
                tools:ignore="TextFields"
                android:autofillHints="" />

            <EditText
                android:id="@+id/date_fin"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:hint="@string/to_hint"
                android:inputType="time"
                tools:ignore="TextFields"
                android:autofillHints="" />
    </LinearLayout>
    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:hint="@string/justification_hint"
        android:inputType="textImeMultiLine"
        android:autofillHints="" />


        <LinearLayout
            android:id="@+id/layout_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_20sdp">
            <TextView
            android:id="@+id/txtfichier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="@dimen/_2sdp"
            android:text="@string/click_to_attach_file" />
        <Button
            android:id="@+id/btnUploadFile"
            android:layout_width="@dimen/_45sdp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginStart="@dimen/_10sdp"
            android:drawableTint="@color/white"
            android:drawableLeft="@drawable/ic_attach_file"
            android:backgroundTint="@color/black"
        />
        </LinearLayout>


    <Button
        android:id="@+id/btn_ValidLeaveReq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/myblue"
        android:text="@string/btn_validate"
        android:textColor="@color/white" />
    </LinearLayout>
</ScrollView>
</FrameLayout>